2004-09-29  Dan Winship  <danw@novell.com>

	* delegates, security:
	* reference/features/delegation.xml:
	* reference/features/permissions.xml: Migrate two more files to
	docbook

	* Makefile.am, README
	* reference/ximian-connector-docs.sgml: Update

2004-09-28  Dan Winship  <danw@novell.com>

	* reference/ximian-connector-docs.sgml: Add "Implementation of
	Connector Features" chapter

	* reference/features/*.xml: Add notes on several connector
	features. (favorites, fba, free/busy, other users' folders, and
	mail folder threading). More to come.

	* reference/Makefile.am (dist-hook-local): dist them

	* favorites, freebusy, forms-based-auth: Gone. Migrated to docbook

	* README, Makefile.am: Update for removed files

2004-09-02  Dan Winship  <danw@novell.com>

	* reference/: lots of updating

2004-08-19  Dan Winship  <danw@novell.com>

	* service-packs: Document what version/build numbers of Exchange
	correspond to what service packs.

	* README: add service-packs

2004-08-04  Dan Winship  <danw@novell.com>

	* openldap-ntlm.diff: Update this to work with OpenLDAP 2.2.x

2004-05-11  Dan Winship  <danw@ximian.com>

	* Ximian Connector 1.5.7, first GPL release.
