@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
                "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
-<refentry id="fba">
+<refentry id="ximian-connector-fba">
 <refmeta>
 <refentrytitle><application>Exchange 2003</application> Forms-Based Authentication</refentrytitle>
 <manvolnum>3</manvolnum>
