@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
                "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd">
-<refentry id="freebusy">
+<refentry id="ximian-connector-freebusy">
 <refmeta>
 <refentrytitle>Free/Busy Searches</refentrytitle>
 <manvolnum>3</manvolnum>
@@ -269,13 +269,13 @@ This is known to be used for at least three things:
     <listitem><para>
     The user's list of delegates and their "see private items"
     permissions are stored on it, as described in "<link
-    linkend="delegates">Delegates</link>".
+    linkend="ximian-connector-delegates">Delegates</link>".
     </para></listitem>
 
     <listitem><para>
     Certain preferences that allow the account to be used as a
     "resource" are stored here, as described in "<link
-    linkend="booking">Direct Booking</link>".
+    linkend="ximian-connector-booking">Direct Booking</link>".
     </para></listitem>
 </orderedlist>
 
