@@ -1,3 +1,15 @@
+2004-10-05  Dan Winship  <danw@novell.com>
+
+	* reference/features/*: Namespace cross-references
+
+2004-10-04  Dan Winship  <danw@novell.com>
+
+	* reference/features/autoconfig.xml: Explain how autoconfig works
+	and how it can be overridden. Partly from the old plaintext
+	autoconfig doc.
+
+	* reference/ximian-connector-docs.sgml: add autoconfig
+
 2004-09-29  Dan Winship  <danw@novell.com>
 
 	* delegates, security:
